--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -113,3 +113,6 @@
     right:0;
 }
 
+.intro-description{
+    line-height: 1.4;
+}
